# tbotros_hw

./: README.md
aruco_detector/: package.xml  setup.cfg  setup.py
aruco_detector/aruco_detector/: aruco_detector_node.py  base_pose_publisher_node.py
aruco_detector/config/: calibration.yaml
aruco_detector/launch/: aruco_detector.launch.py
aruco_detector/urdf/: camera.urdf
bash/: setup.sh
canopen_network/: package.xml  run.py  setup.cfg  setup.py
canopen_network/canopen_network/: canopen_network.py  canopen_network_base_node.py  canopen_network_canopen_master_node.py  canopen_network_faulhaber_motor_node.py
canopen_network/eds/: 605.3150.68-E.eds
serial_manager/: package.xml  setup.cfg  setup.py
serial_manager/serial_manager/: serial_manager_node.py
wireless_servo/: package.xml  setup.cfg  setup.py
wireless_servo/wireless_servo/: test.py  wireless_servo_base_node.py  wireless_servo_central_node.py  wireless_servo_node.py  wireless_servo_peripheral_node.py
