<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_detector</name>
  <version>0.0.0</version>
  <description>Detection and localization of aruco markers</description>
  <maintainer email="harms.simon759@mail.kyutech.jp">srl-orin</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-numpy-quaternion-pip</exec_depend>
  <exec_depend>custom_actions</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
