<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>canopen_network</name>
  <version>0.0.0</version>
  <description>Packages for creating a canopen network</description>
  <maintainer email="harms.simon759@mail.kyutech.jp">Simon Harms</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>canopen-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>custom_srvs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>custom_actions</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
